# ista

./: .clangd  .coveragerc  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SIMPLIFIED_BINDINGS_SUMMARY.md  add_drug_disease_neurokb.ipynb  build_gui.ps1  imgui.ini  install  migrate_database_parser.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_family_simple.ofn  test_family_simple.rdf  test_migration.py  test_ontology_load.cpp  test_parser.py  test_simple_bindings.py  test_subgraph.py
.claude/: settings.local.json
.github/workflows/: DOCS_DEPLOYMENT_SETUP.md  build-docs.yml
docs/: Doxyfile  OWL2_INTERFACES.md  OWLREADY2_MIGRATION_ANALYSIS.md  README.md  README_MEMGRAPH_INTEGRATION.md  REPOSITORY_CLEANUP.md  SIMPLIFIED_BINDINGS_SUMMARY.md  build_docs.bat  build_docs.sh  ista-typesetting.tex
docs/agent_plans/: MIGRATION_COMPLETE.md  PLAN_DATA_LOADING_ARCHITECTURE.md
docs/developer_guides/: IDE_SETUP.md  OWL2_INTERFACES.md  OWLREADY2_REPLACEMENT_SUMMARY.md  README_CSV_POPULATION.md  README_KONCLUDE_INTEGRATION.md  REPOSITORY_CLEANUP.md
docs/doxygen/xml/: Doxyfile.xml  annotation_8cpp.xml  annotation_8hpp.xml  axiom_8cpp.xml  axiom_8hpp.xml  class__expression_8cpp.xml  class__expression_8hpp.xml  classista_1_1owl2_1_1Annotation.xml  classista_1_1owl2_1_1AnnotationAssertion.xml  classista_1_1owl2_1_1AnnotationProperty.xml  classista_1_1owl2_1_1AnnotationPropertyDomain.xml  (+208 more)
docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  installation.rst
examples/: COMPLETE_WORKFLOW.md  DRUGBANK_INTEGRATION_README.md  MEMGRAPH_QUICK_START.md  QUICK_START.md  README.md  README_CSV_POPULATION.md  add_drug_contraindication_relationships_direct.py  add_drug_disease_relationships_direct.py  add_drug_disease_relationships_example.py  add_drug_relationships_combined_direct.py  adverse_event_map.py  contraindication_map.py  drug_adverse_event_mappings_filtered.csv  drug_interaction_mappings_filtered.csv  filter_adverse_event_mappings_by_ontology.py  filter_contraindication_mappings_by_ontology.py  filter_drug_interaction_mappings_by_ontology.py  filter_mappings_by_ontology.py  flatfile_population_example.py  graph_conversion_example.py  knowledge_graph_analysis.py  konclude_reasoning_example.py  native_csv_population_example.py  owl2_example.py  owl2_roundtrip_example.py  social_network_ontology.py  subgraph_extraction_example.py  test_new_api.py  test_rdf_parsing.py  test_roundtrip.ttl  test_turtle_roundtrip.py
examples/archived_scripts/: README.md  add_all_drug_relationships_direct.py  add_drug_adverse_event_relationships_direct.py  add_drug_contraindication_relationships_example.py  add_drug_interaction_relationships_direct.py  add_drug_relationships_combined_example.py  debug_ontology_iris.py  debug_rdf_roundtrip.py  drug_interaction_map.py  indication_map.py  simple_iri_test.py  test_rdf_parsing_for_memgraph.py
examples/csv_data/: authors.csv  authorship.csv  books.csv
examples/drugbank_examples/: README.md  add_drug_relationships.py  check_severity_levels.py  drug_contraindication_mappings.csv  drug_contraindication_mappings_filtered.csv  drug_disease_mappings.csv  drug_disease_mappings_filtered.csv  drug_interaction_mappings.csv  filter_drug_mappings.py
examples/flatfile_data/: authorship.csv  books.csv
examples/kg_projects/: alzheimers_subgraph.rdf  library_catalog_native.rdf
examples/memgraph_examples/: MEMGRAPH_LOADING_README.md  load_neurokb_to_memgraph.py  load_neurokb_to_memgraph_v2.py  memgraph_integration_example.py
examples/pharmatox_example/: README.md
examples/tests/: test_turtle_serializer.py
gui/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  COMPILATION_FIXES.md  NATIVE_FILE_DIALOG.md  QUICKSTART.md  README.md  VARIANT_TYPES_REFERENCE.md  setup_dependencies.sh
gui/include/: kg_editor.hpp
gui/src/: kg_editor.cpp  main.cpp
ista/: __init__.py  database_parser.py  ista.py  load_kb.py  memgraph_loader.py  owl2.py  owl2memgraph.py  util.py
ista/converters/: README.md  __init__.py  igraph_converter.py  ista_graph_converter.py  networkx_converter.py  ontology_to_graph.py
ista/graph/: edge.py  graph.py  node.py
ista/io/: graph_io.py
ista/tests/: test_converters.py  test_graph.py  test_memgraph_loader.py  test_owl2memgraph.py
lib/: CMakeLists.txt  README.md
lib/owl2/: README.md  assertion.hpp  axiom.hpp  entity.hpp  generalDefs.hpp  iri.hpp  owl2.cpp  owl2.hpp
lib/owl2/core/: annotation.cpp  annotation.hpp  axiom.cpp  axiom.hpp  class_expression.cpp  class_expression.hpp  data_range.cpp  data_range.hpp  entity.hpp  entity.hpp.backup  iri.cpp  iri.hpp  literal.cpp  literal.hpp  ontology.cpp  ontology.hpp  ontology_filter.cpp  ontology_filter.hpp
lib/owl2/loader/: data_loader.cpp  data_loader.hpp  database_reader.cpp  database_reader.hpp  mapping_spec.cpp  mapping_spec.hpp  mysql_reader.cpp  mysql_reader.hpp  postgres_reader.cpp  postgres_reader.hpp  sqlite_reader.cpp  sqlite_reader.hpp  transform_engine.cpp  transform_engine.hpp  yaml_parser.cpp  yaml_parser.hpp
lib/owl2/parser/: csv_parser.cpp  csv_parser.hpp  functional_parser.cpp  functional_parser.hpp  manchester_parser.cpp  manchester_parser.hpp  owlxml_parser.cpp  owlxml_parser.hpp  rdfxml_parser.cpp  rdfxml_parser.hpp  turtle_parser.cpp  turtle_parser.hpp
lib/owl2/reasoner/: konclude_wrapper.cpp  konclude_wrapper.hpp
lib/owl2/serializer/: functional_serializer.cpp  functional_serializer.hpp  manchester_serializer.cpp  manchester_serializer.hpp  owlxml_serializer.cpp  owlxml_serializer.hpp  rdfxml_serializer.cpp  rdfxml_serializer.hpp  turtle_serializer.cpp  turtle_serializer.hpp
lib/python/: CMakeLists.txt  README.md  README_SIMPLE.md  __init__.py  bindings.cpp  bindings_simple.cpp  example.py
scripts/deprecated/: fix_entity.py
src/: CMakeLists.txt  ista.cpp
tests/: README.md  test_owl2_parsers.py  test_owl2_serializers.py  test_parser.py  test_simple_bindings.py  test_subgraph.py
tests/config/: comptoxai.py
tests/manual_test_scripts/: test_data.csv
(+32 files in other folders)
